added authenticate middlware, sign-in api, sign-up api
